# cookiecutter-pypackage-uv

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: .pages  automated_tasks.md  build_release_docs.md  console_script_setup.md  prompts.md  pypi_release_checklist.md  troubleshooting.md  tutorial.md  write_docs.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: __init__.py  test_bake_project.py  utils.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  tasks.py  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: python-publish.yml  release-drafter.yml  test-push-pr.yml
{{cookiecutter.project_slug}}/docs/: .pages  installation.md  usage.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: cli.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
